src/objects/Work_Order__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Work Orders</relationshipLabel>
        <relationshipName>R00N30000002uhkVEAQ</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Beta_Due_Date__c</fullName>
        <inlineHelpText>Date Technical Services has indicated the project will be ready for Beta testing.</inlineHelpText>
        <label>Beta Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Budget_Amount__c</fullName>
        <inlineHelpText>What is the client&apos;s expectation in terms of cost, if any?</inlineHelpText>
        <label>Budget Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Budgeted_Hours__c</fullName>
        <defaultValue>&quot;1&quot;</defaultValue>
        <description>Quoted hours reflects the total development hours in the written quote (Shaffer and Cometto, i.e. sum of Dev Hours and Mgr Hours).  Project Management outside of Development are NOT INCLUDED.</description>
        <inlineHelpText>PM:  Add your hours to Quoted Hours for the total LOE to present to client.</inlineHelpText>
        <label>Quoted Hours</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>R00N30000002uU0iEAE</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CreateAssign__c</fullName>
        <label>CreateAssign</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Development_Status__c</fullName>
        <label>Development Status</label>
        <picklist>
            <controllingField>Stage__c</controllingField>
            <picklistValues>
                <fullName>Planning</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waiting for Feedback</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ready to Test</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Testing Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Hold</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <inlineHelpText>Date Technical Services has indicated the project will be ready for release in Production.</inlineHelpText>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Environment_Prepared__c</fullName>
        <defaultValue>false</defaultValue>
        <description>For triggers, this box should be checked only if there exists a sandbox mirroring the custom fields, WFR&apos;s, etc. for the likewise properly configured underlying SF Object.  For integrations, ftp sites, sample data, etc. must be available to development in order to satisfy this requirement.</description>
        <inlineHelpText>For triggers, check only if a sandbox mirroring the custom fields, WFR&apos;s, etc. for the likewise properly configured underlying SF Object.  For integrations, ftp sites, sample data, etc. must be available to order to satisfy this requirement.</inlineHelpText>
        <label>Environment Prepared</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Next_Step_Due_Date__c</fullName>
        <label>Next Step Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_Step__c</fullName>
        <label>Next Step</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>RMA Contact</inlineHelpText>
        <label>PM</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R00N30000002wNeLEAU</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Priority_Indicator__c</fullName>
        <formula>Related_Case__r.Priority_Indicator__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This work order is a urgent if the indicator is red.</inlineHelpText>
        <label>Priority Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority_Number__c</fullName>
        <formula>Related_Case__r.Priority_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Priority Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Production_Login__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Production Login</label>
        <referenceTo>Login__c</referenceTo>
        <relationshipLabel>Work Orders (Production Login)</relationshipLabel>
        <relationshipName>Work_Orders1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>Appirio_PSAe__Proj__c</referenceTo>
        <relationshipLabel>Work Orders</relationshipLabel>
        <relationshipName>Work_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reference_Summary_Used_in_Cloud_Extend__c</fullName>
        <description>This field is ONLY displayed in Cloud Extend to help the user pick the right WO(s).</description>
        <formula>Name&amp;&quot;-&quot;&amp;&quot;-&quot;&amp;Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reference Summary- Used in Cloud Extend</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Work Orders</relationshipLabel>
        <relationshipName>Work_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Work_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Use this if the Work Order references a previous project.</inlineHelpText>
        <label>Related Work Order</label>
        <referenceTo>Work_Order__c</referenceTo>
        <relationshipLabel>Related Work Orders</relationshipLabel>
        <relationshipName>Work_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Requested_Beta_Date__c</fullName>
        <inlineHelpText>Date PM or Client has requested this be ready for Beta testing</inlineHelpText>
        <label>Requested Beta Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Requested_Due_Date__c</fullName>
        <inlineHelpText>Date PM or Client has requested this be released to Production.</inlineHelpText>
        <label>Requested Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sandbox_Login__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sandbox Login</label>
        <referenceTo>Login__c</referenceTo>
        <relationshipLabel>Work Orders</relationshipLabel>
        <relationshipName>Work_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sandbox_Name__c</fullName>
        <label>Sandbox Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sourcing__c</fullName>
        <label>Sourcing</label>
        <picklist>
            <picklistValues>
                <fullName>Insource</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Outsource</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>RFQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quoted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Production</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bug</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Withdrawn</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Technical_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Technical Lead</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Work_Orders1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Time_in_Queue__c</fullName>
        <formula>NOW()  -  CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time in Queue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Browser</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Integration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Migration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S-Control</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trigger</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VF Page</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>WO_Stage_Updated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>WO Stage Updated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Withdrawn_Reason__c</fullName>
        <label>Withdrawn Reason</label>
        <type>TextArea</type>
    </fields>
    <label>Work Order</label>
    <listViews>
        <fullName>AlgoWorks_Work_Orders</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Description__c</columns>
        <columns>Stage__c</columns>
        <columns>Development_Status__c</columns>
        <columns>Budgeted_Hours__c</columns>
        <columns>Next_Step__c</columns>
        <columns>Next_Step_Due_Date__c</columns>
        <columns>Beta_Due_Date__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Related_Case__c</columns>
        <columns>Sourcing__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Sourcing__c</field>
            <operation>equals</operation>
            <value>Outsource</value>
        </filters>
        <filters>
            <field>Stage__c</field>
            <operation>notEqual</operation>
            <value>New,Hold,Withdrawn</value>
        </filters>
        <label>AlgoWorks Work Orders</label>
    </listViews>
    <listViews>
        <fullName>All_Work_Orders</fullName>
        <columns>NAME</columns>
        <columns>Technical_Lead__c</columns>
        <columns>Account__c</columns>
        <columns>PM__c</columns>
        <columns>Type__c</columns>
        <columns>Stage__c</columns>
        <columns>Budgeted_Hours__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Description__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Work_Order__c.Work_Order</value>
        </filters>
        <label>All Work Orders</label>
        <sharedTo>
            <group>Internal_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Beta2</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Description__c</columns>
        <columns>Development_Status__c</columns>
        <columns>Due_Date__c</columns>
        <columns>PM__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Stage__c</field>
            <operation>equals</operation>
            <value>Beta</value>
        </filters>
        <label>5- Beta</label>
        <sharedTo>
            <group>RMA</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Bug_List</fullName>
        <columns>NAME</columns>
        <columns>Stage__c</columns>
        <columns>Account__c</columns>
        <columns>PM__c</columns>
        <columns>Type__c</columns>
        <columns>Description__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>LAST_ACTIVITY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Stage__c</field>
            <operation>equals</operation>
            <value>Bug</value>
        </filters>
        <label>6- Bug</label>
        <sharedTo>
            <group>RMA</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Dev_Focus</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Next_Step__c</columns>
        <columns>Description__c</columns>
        <columns>Next_Step_Due_Date__c</columns>
        <columns>Due_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Stage__c</columns>
        <columns>PM__c</columns>
        <columns>Technical_Lead__c</columns>
        <columns>Budgeted_Hours__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Work_Order__c.Work_Order</value>
        </filters>
        <filters>
            <field>Stage__c</field>
            <operation>equals</operation>
            <value>Development,Beta,Bug,Client Approved</value>
        </filters>
        <label>9- Dev Focus</label>
        <sharedTo>
            <group>RMA</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Development</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Description__c</columns>
        <columns>Development_Status__c</columns>
        <columns>Beta_Due_Date__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Budgeted_Hours__c</columns>
        <columns>PM__c</columns>
        <columns>Technical_Lead__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Stage__c</field>
            <operation>equals</operation>
            <value>Development</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Work_Order__c.Work_Order</value>
        </filters>
        <filters>
            <field>Account__c</field>
            <operation>notContain</operation>
            <value>Rainmaker</value>
        </filters>
        <filters>
            <field>Development_Status__c</field>
            <operation>notEqual</operation>
            <value>On Hold</value>
        </filters>
        <filters>
            <field>Technical_Lead__c</field>
            <operation>notEqual</operation>
            <value>Dave Shaffer</value>
        </filters>
        <label>4- Development</label>
        <sharedTo>
            <group>RMA</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Development_On_Hold</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Description__c</columns>
        <columns>Budgeted_Hours__c</columns>
        <columns>Requested_Beta_Date__c</columns>
        <columns>Requested_Due_Date__c</columns>
        <columns>PM__c</columns>
        <columns>Technical_Lead__c</columns>
        <columns>Next_Step__c</columns>
        <columns>Next_Step_Due_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Stage__c</field>
            <operation>equals</operation>
            <value>Development</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Work_Order__c.Work_Order</value>
        </filters>
        <filters>
            <field>Account__c</field>
            <operation>notContain</operation>
            <value>Rainmaker</value>
        </filters>
        <filters>
            <field>Development_Status__c</field>
            <operation>equals</operation>
            <value>On Hold</value>
        </filters>
        <label>Development - On Hold</label>
        <sharedTo>
            <group>RMA</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Fishnet_Only</fullName>
        <columns>NAME</columns>
        <columns>Priority_Indicator__c</columns>
        <columns>Next_Step__c</columns>
        <columns>Next_Step_Due_Date__c</columns>
        <columns>Stage__c</columns>
        <columns>Development_Status__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Related_Case__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Technical_Lead__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account__c</field>
            <operation>contains</operation>
            <value>Fishnet</value>
        </filters>
        <filters>
            <field>Stage__c</field>
            <operation>equals</operation>
            <value>New,RFQ,Quoted,Client Approved,Development,Bug</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Work_Order__c.Work_Order</value>
        </filters>
        <label>Fishnet Only</label>
    </listViews>
    <listViews>
        <fullName>Internal_Project</fullName>
        <columns>NAME</columns>
        <columns>Budgeted_Hours__c</columns>
        <columns>Account__c</columns>
        <columns>PM__c</columns>
        <columns>Stage__c</columns>
        <columns>Type__c</columns>
        <columns>Description__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Due_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Work_Order__c.Work_Order</value>
        </filters>
        <filters>
            <field>Account__c</field>
            <operation>contains</operation>
            <value>Rainmaker</value>
        </filters>
        <filters>
            <field>Stage__c</field>
            <operation>notEqual</operation>
            <value>Production,Bug,Hold,Withdrawn</value>
        </filters>
        <label>8- Internal Project</label>
    </listViews>
    <listViews>
        <fullName>JGP_My_Work_Orders</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Contact__c</columns>
        <columns>Next_Step__c</columns>
        <columns>Next_Step_Due_Date__c</columns>
        <columns>Beta_Due_Date__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Description__c</columns>
        <columns>Stage__c</columns>
        <columns>Budgeted_Hours__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Technical_Lead__c</field>
            <operation>equals</operation>
            <value>Justin Padilla</value>
        </filters>
        <label>JGP My Work Orders</label>
        <sharedTo>
            <group>RMA</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Work_Orders</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Contact__c</columns>
        <columns>Next_Step__c</columns>
        <columns>Next_Step_Due_Date__c</columns>
        <columns>Beta_Due_Date__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Description__c</columns>
        <columns>Budgeted_Hours__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Stage__c</field>
            <operation>equals</operation>
            <value>New,RFQ,Quoted,Development,Beta,Bug,Hold,Withdrawn</value>
        </filters>
        <label>My Work Orders</label>
        <sharedTo>
            <group>RMA</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>New_No_RFQ</fullName>
        <columns>WO_Stage_Updated__c</columns>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Description__c</columns>
        <columns>PM__c</columns>
        <columns>Next_Step__c</columns>
        <columns>Next_Step_Due_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Stage__c</field>
            <operation>equals</operation>
            <value>New</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Work_Order__c.Work_Order</value>
        </filters>
        <label>0- New (No RFQ)</label>
        <sharedTo>
            <group>RMA</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Next_Steps_Due_Next_7_Days</fullName>
        <booleanFilter>(1 or 2) and 3</booleanFilter>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Description__c</columns>
        <columns>Type__c</columns>
        <columns>Stage__c</columns>
        <columns>Next_Step__c</columns>
        <columns>Next_Step_Due_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Next_Step_Due_Date__c</field>
            <operation>equals</operation>
            <value>NEXT_N_DAYS:7</value>
        </filters>
        <filters>
            <field>Next_Step_Due_Date__c</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Work_Order__c.Work_Order</value>
        </filters>
        <label>Next Steps Due Next 7 Days</label>
        <sharedTo>
            <group>RMA</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Production</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Description__c</columns>
        <columns>PM__c</columns>
        <columns>Due_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Stage__c</field>
            <operation>equals</operation>
            <value>Production,Fixed</value>
        </filters>
        <label>7- Production</label>
        <sharedTo>
            <group>RMA</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Quoted</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Description__c</columns>
        <columns>PM__c</columns>
        <columns>Budgeted_Hours__c</columns>
        <columns>Requested_Beta_Date__c</columns>
        <columns>Requested_Due_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Next_Step__c</columns>
        <columns>Next_Step_Due_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Stage__c</field>
            <operation>equals</operation>
            <value>Quoted</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Work_Order__c.Work_Order</value>
        </filters>
        <label>2- Quoted</label>
        <sharedTo>
            <group>RMA</group>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>WO-{YYYY}{MM}-{00}</displayFormat>
        <label>Work Order Nu</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Work Orders</pluralLabel>
    <recordTypes>
        <fullName>Work_Order</fullName>
        <active>true</active>
        <label>Work Order</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Beta_Due_Date_greater_than_Due_Date</fullName>
        <active>true</active>
        <errorConditionFormula>Beta_Due_Date__c  &gt; Due_Date__c</errorConditionFormula>
        <errorDisplayField>Beta_Due_Date__c</errorDisplayField>
        <errorMessage>Beta Due Date cannot be greater than Due Date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Must_have_Due_Dates</fullName>
        <active>true</active>
        <errorConditionFormula>AND( OR(ISPICKVAL( Stage__c , &quot;Development&quot;),ISPICKVAL(Stage__c,&quot;Beta&quot;))   ,  OR(ISNULL( Beta_Due_Date__c ), ISNULL( Due_Date__c ) )  )</errorConditionFormula>
        <errorMessage>You must enter a Beta Due Date and a Due Date for the Work Order.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Project_Required</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISPICKVAL(Stage__c ,&quot;Client Approved&quot;),  ISBLANK(Project__c  ))</errorConditionFormula>
        <errorDisplayField>Project__c</errorDisplayField>
        <errorMessage>Please enter a Project.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Tech_Lead</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISPICKVAL(Stage__c ,&quot;Client Approved&quot;),  ISBLANK(Technical_Lead__c ))</errorConditionFormula>
        <errorDisplayField>Technical_Lead__c</errorDisplayField>
        <errorMessage>Please enter a Technical Lead. Use Kalyan as a default if you are not sure who will be working on your work order.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Withdrawn_Reason</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISPICKVAL( Stage__c ,&quot;Withdrawn&quot;) , ISBLANK( Withdrawn_Reason__c ) )</errorConditionFormula>
        <errorDisplayField>Withdrawn_Reason__c</errorDisplayField>
        <errorMessage>Please enter the reason with withdraw of this work order.</errorMessage>
    </validationRules>
</CustomObject>